[main] Replace QDox with javac-based parser for Java source indexing (#8357)
### Context

Closes https://github.com/scalameta/metals/issues/8349

Pulled out of https://github.com/scalameta/metals/pull/8350 -- improve
JavaDox indexing while removing last vestige of qdox dep in main-v2.

Replaces the end-of-life QDox library with [javac from `main-v2`
branch](https://github.com/scalameta/metals/blob/main-v2/mtags/src/main/scala/scala/meta/internal/mtags/JavacMtags.scala)
for Java source parsing in the mtags module against `main`. QDox cannot
parse valid Java files containing annotations in type parameter
positions (e.g. `<T extends @Nullable Object>`) and has no error
recovery — a single parse failure loses all symbol information for an
entire file.

### Key changes:
- Replace JavaMtags with JavacMtags using JavacTask/TreeScanner (adopted
from main-v2)
- Extract JavadocParser as a standalone utility for Javadoc parsing
- Refactor JavadocIndexer to use the new JavadocParser
- Add --add-exports JVM flags for jdk.compiler internals (adopted from
main-v2)
- Remove QDox dependency from build.sbt
- Add JavadocParserSuite tests

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Richer Javadoc extraction: improved type-parameter and parameter docs
plus optional Markdown rendering in hovers and signatures.

* **Chores**
* Java semantic indexing switched to a javac-based parser
implementation.
  * Build emits and reuses required JVM options for runs and tests.
  * Indexing infrastructure enhanced to support the new parser.

* **Tests**
* Added Javadoc parser tests and updated many
documentation/signature/tree-view expectations.

* **Documentation**
  * Architecture docs updated to reflect the new Java indexing backend.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>